--- a/src/styles/PracticeShow.css
+++ b/src/styles/PracticeShow.css
@@ -1,6 +1,6 @@
 #page {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
     margin-left: 250px;
